--- a/src/components/placeholder-competition/styles.scss
+++ b/src/components/placeholder-competition/styles.scss
@@ -3,22 +3,15 @@
   background-color: white;
   margin-top: 30px;
   padding: 1rem 0;
-  width: 550px;
+  width: 200px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   flex-direction: column;
-  @include mobile {
-    width: 95%;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
 }
 
 .fa-placeholder-competition-match-day {
-  margin-top: 20px;
   @include placeholder-animation(25px, 55%);
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px;
 }
